<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MappingBooks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Create Account</string>
    <string name="icon_description">iconita</string>
    <string name="app_title">MappingBooks</string>
    <string name="forgot">Forgot Password</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="app_name_sm">Slider Menu</string>
    <string name="action_settings_sm">Settings</string>
    <string name="hello_world_sm">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="device">Smartphone</string>
    <string name="title_activity_display_message">My Message</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Proximity</item>
        <item >Font Size</item>
        <item>Map Mode</item>
        <item >Save</item>
        <item >Exit</item>
        </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/proximity</item>
        <item>@drawable/text_size</item>
        <item>@drawable/text_size</item>
        <item>@drawable/save</item>
        <item>@drawable/exit</item>
       
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="noBooks">You don\'t have any book uploaded.</string>
    <string name="add_book">Add Book</string>
    <string name="logout">Logout</string>

    <!-- Toast messages -->
    <!-- TODO: Make sure these messages are appropriate -->
    <string name="no_connection">Network connection unavailable</string>
</resources>
