<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Header  Starts -->

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <!-- Logo Start -->

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/logo_big"
                android:contentDescription="@string/icon_description" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/app_title"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <!-- Logo Ends -->
        </RelativeLayout>
        <!-- Header Ends -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/top_edittext_bg"
                android:fontFamily="sans-serif"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/normal_edittext_bg"
                android:fontFamily="sans-serif"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/normal_edittext_bg"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/confirm_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bottom_edittext_bg"
                android:fontFamily="sans-serif"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/rounded_button"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="createAccount"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />
            
        </LinearLayout>
    </RelativeLayout>

</ScrollView>