<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_edittext_bg"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/top_edittext_bg"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_button"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:onClick="login" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_username"
        android:layout_alignLeft="@+id/input_username"
        android:layout_alignRight="@+id/input_username"
        android:layout_marginBottom="18dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/app_tittle"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/logo_big"
        android:contentDescription="@string/icon_description" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:fontFamily="sans-serif"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textStyle="bold"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:onClick="createAccount" />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:fontFamily="sans-serif"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textStyle="bold"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:onClick="forgotPassword" />
    
</RelativeLayout>